# meltano-state-backend-clickhouse

./: LICENSE  README.md  pyproject.toml
src/meltano_state_backend_clickhouse/: __init__.py  backend.py
tests/: test_backend.py
